idam/keycloak-ingress/passthrough-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: passthrough
  namespace: istio-system
spec:
  selector:
    app: keycloak-ingressgateway
  servers:
  - hosts:
    - '###ZARF_VAR_SUBDOMAIN###.###ZARF_VAR_DOMAIN###'
    port:
      name: http
      number: 8080
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '###ZARF_VAR_SUBDOMAIN###.###ZARF_VAR_DOMAIN###'
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
